assets/css/styles.css
:root {
  --main-padding: 40px;
  --border--gray: #838383;
  --text-white : #FFFFFF;
  --bg-white : #FFFFFF;
  --bg-black : #000000;
  --bg-black-shadow: #00000070;
}

body {
  margin: 0;
  padding: 0;
  font-family: europa,sans-serif;
}

footer {
  position : relative;
  bottom: 0;
  min-height:200px;
  padding: var(--main-padding);
}

a {
  text-decoration: none;
  color: inherit !important;
}

/* ============================================= */
/* CONTAINER */
/* ============================================= */


.container {
  margin: 0 auto;
}

nav a {
  text-decoration: none;
}


/* ============================================= */
/* DIVIDER */
/* ============================================= */

.divider hr {
  width: 80%;
  margin: 0 auto;
}


/* ============================================= */
/* HEADER and NAV */
/* ============================================= */
header {
  position: sticky;
  top: 0;
  z-index:2;
  background-color: var(--bg-white);
}

header > nav {

  min-height : 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav div {
  padding: 0 20px;
}

footer {
  background-color: var(--bg-black);
  color: var(--text-white);
}


/* ============================================= */
/* ARTICLES */
/* ============================================= */

.article--wrapper {
  margin: 0 auto;
  padding-bottom: 100px;
}

.article--wrapper > article {
  display:flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.article--wrapper > article > small {
  padding : 10px;
}
.article--wrapper > article > p {
  line-height: 1.5rem;
}

.article--wrapper .article__tag {
  min-width: 50px;
  padding: 5px 10px;
  border: 1px solid var(--border--gray);
  background-color: var(--bg-white);
  box-shadow: -2px 4px 1px var(--bg-black-shadow);
  text-transform: uppercase;
}


/* ============================================= */
/* FEATURED ARTICLES */
/* ============================================= */

.featured--wrapper {
  padding: var(--main-padding);
  display: grid;
  gap: 1.5rem;
}

.featured__articles:hover {
  transform: scale(1.02);
  transition: .500ms;
}

.featured__articles img  {
  max-width: 100%;
  max-height: 100%;
}

.featured__articles p,h4 {
  padding: 2px;
}


.featured__image > a{
  max-width: 100%;
  position: relative;
  text-align: center;
  font-weight: bolder;
  display: flex;
  align-items: center;
  justify-content: center;
}
.featured__image > img{
  max-width: 100%;
  max-height: 100%;
  position: relative;
}

.featured__articles--tag {
  position: absolute;
  z-index: 1;
  min-width: 50px;
  margin: 0 auto;
  bottom: -10px;
  padding: 5px 10px;
  border: 1px solid var(--border--gray);
  background-color: var(--bg-white);
  box-shadow: -2px 4px 1px var(--bg-black-shadow);
  text-transform: uppercase;
}

/* ============================================= */
/* JOIN US WRAPPER */
/* ============================================= */
.join-us--wrapper {
  margin-bottom: 20px;
}

.join-us--wrapper > h1 {
  text-align: center;
  text-transform: uppercase;
}

.join-us--wrapper > p {
  text-align: center;
}

.designer--wrapper {
  display: grid;
  gap: .5rem;
}

.designer--item {
  position : relative;
  font-weight: bolder;
  display: flex;
  align-items: center;
  justify-content: center;
}

.designer--item > span {
  position:absolute;
  min-width: 50px;
  color: var(--bg-white);
  margin:2px;
}

.designer--item:hover > span{
  padding: 5px 10px;
  background-color: var(--bg-white);
  box-shadow: -2px 4px 1px var(--bg-black-shadow);
  color: var(--bg-black);
}

.designer--item > img {
  max-width: 100%;
}

/* ============================================= */
/* FOOTER WRAPPER */
/* ============================================= */

.footer--wrapper {
  max-width: 100%;
  display: grid;
  gap: 1rem;
}

.newsletter--wrapper {
  display: flex;
  flex-direction: column;
}

.newsletter--wrapper > small {
  padding-bottom: 5px;
}

.newsletter__form--group {
  display: flex;
  flex-direction: column;
}

.newsletter__form--group input[type="email"] {
  width:75%;
  padding: 10px 5px;
  margin-bottom: 10px;
}
.newsletter__form--group button {
  max-width: max-content;
  padding: 5px 10px;
  border-radius: 20px;
}

.footer__menu--wrapper {
  display: grid;
  gap: 1rem;
}

.footer__menu--item > h4{
  text-transform: uppercase;
}

.footer__menu--item > nav {
  display: flex;
  flex-direction: column;
}

.footer__menu--item > nav a:visited {
  color: var(--text-white);
}




/* ============================================= */
/* media queries */
/* ============================================= */

/* xs */
@media screen and (max-width: 575px) {
  .container {
    max-width : 95%;
  }
}
/* sm */
@media screen and (min-width: 576px) and (max-width: 767px) {
  .container {
    max-width: 85%;
  }
  /* featured-wrapper element and child */
  .featured--wrapper {
    grid-template-columns: 1fr 1fr;
  } 
  .featured__articles {
    display: flex;
    flex-direction: column;
  }
  .featured__articles > .featured__image {
    height: 300px;
    width: 100%;
  }
}
/* md */
@media screen and (min-width: 768px) and (max-width: 991px) {
  .container {
    max-width: 80%;
  }
  /* featured-wrapper element and child */
  .featured__articles:nth-child(1) > img {
    height: 400px;
  }

  .featured__articles {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .featured__articles:nth-child(1) {
    grid-column: 2/5;

  }
  .featured__articles:nth-child(2) {
    grid-column: 1/3;
  }
  .featured__articles:nth-child(3) {
    grid-column: 3/6;
  }
  .featured__articles:nth-child(4) {
    grid-column: 1/3;
  }
  .featured__articles:nth-child(5) {
    grid-column: 3/6;
  }
}
/* lg */
@media screen and (min-width: 992px) {
  .container {
    max-width: 80%;
  }
  /* articles */
  .article--wrapper {
    width: 70%;
  }
  /* featured-wrapper element and child */
  .featured--wrapper {
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: 2;
  }
  .featured__articles > .featured__image {
    max-width: 100%;
    max-height: 100%;
  }
  .featured__articles:nth-child(1) {
    grid-column: 2/4;
    grid-row: 1/3;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  /* designer wrapper element and child */
  .designer--wrapper {
    grid-template-columns: repeat(4,1fr);
  }
  .designer--item:first-child {
    grid-column: 1/3;
    grid-row : 1/3;
  }
  /* footer wrapper element and child */
  .footer--wrapper {
    grid-template-columns: 1fr 1fr;
  }
  .footer__menu--wrapper {
    grid-template-columns: 1fr 1fr;
  }
  .footer__menu--item:last-child {
    grid-column: 1/3;
  }

}

